corrected the Junit to replace list with smasterObject data = list